@@ -7,9 +7,6 @@ WriteMakefile1(
     LICENSE      => 'perl',
     AUTHOR       => 'Dana A Jacobsen <dana@acm.org>',
 
-    LIBS         => [''],   # e.g., '-lm'
-    DEFINE       => '',     # e.g., '-DHAVE_SOMETHING'
-    INC          => '',     # e.g., '-I/usr/include/other'
     OBJECT       => 'cache.o ' .
                     'factor.o '  .
                     'sieve.o '  .
@@ -22,7 +19,8 @@ WriteMakefile1(
     PREREQ_PM    => {
                       'Exporter'         => '5.562',
                       'XSLoader'         => '0.01',
-                      'Carp'             => '0',
+                      'Carp'             => 0,
+                      'Tie::Array'       => 0,
                     },
 
     MIN_PERL_VERSION => 5.006002,
